--- a/Restaurant Website/Restaurant/web.html
+++ b/Restaurant Website/Restaurant/web.html
@@ -81,12 +81,12 @@
       <section class="about">
         <div class="about_info">
           <h2>Founder</h2>
-          <img src="images/Cursed_logo1.png" alt="logo" class="about_us">
+          <img src="https://github.com/HikariNoRyu/HCI-Project/blob/main/Restaurant%20Website/Restaurant/Images/Cursed_logo1.png?raw=true" alt="logo" class="about_us">
           <p>Here is our hero, the one and only Padang King</p>
           <p>Wanna know more about our savior?</p>
           <button>Read more→</button>
           <h2>Logo</h2>
-          <img src="images/Cursed_logo2.png" alt="logo" class="logo">
+          <img src="https://github.com/HikariNoRyu/HCI-Project/blob/main/Restaurant%20Website/Restaurant/Images/Cursed_logo2.png?raw=true" alt="logo" class="logo">
           <p>Here is our scuffed resto logo, its basically an Italian-Padang Mascot.</p>
           <p>Wanna know more about who designed our logo?</p>
           <button>Read more→</button>
