--- a/Restaurant Website/Restaurant/web.html
+++ b/Restaurant Website/Restaurant/web.html
@@ -10,7 +10,7 @@
 
 <body>
     
-    <div class="">
+    <div class="menuclass">
         <nav class="dropdown_menu">
             <button aria-expanded="false" aria-controls="menu-list">
               <span class="open">☰</span>
