--- a/Restaurant Website/Restaurant/web.html
+++ b/Restaurant Website/Restaurant/web.html
@@ -12,31 +12,26 @@
     
     <div class="menuclass">
         <nav class="dropdown_menu">
-            <button aria-expanded="false" aria-controls="menu-list">
-              <span class="open">☰</span>
-              <span class="close">×</span>
-              Menu
-          </button>
-          <ul id="menu"></ul>
-          <li>
+          <ul id="menu">
+            <li>
               Pizza
-          </li>
-          <li>
+            </li>
+            <li>  
               Pasta
-          </li>
-          <li>
+            </li>
+            <li>
               Bread
-          </li>
-          <li>
+            </li>
+            <li>
               Soup
-          </li>
-          <li>
+            </li>
+            <li>
               Ice Cream
-          </li>
-        </ul>
+            </li>
+          </ul>
       </nav>
 
-    <div class="Logo">
+      <div class="Logo">
         <header class=Pizzadang>
         <h1>PIZZADANG OwO</h1>
         <p>Built different ITALIAN CUISINES!</p>
@@ -49,6 +44,7 @@
         <p class="price">$4.20</p>
         <p>Padang Lasagna</p>
       </div>
+    </div>
       
       <section class="showcase">
         <div class="items">
@@ -78,23 +74,31 @@
           </div>
       </section>
   
-      <section class="about">
-        <div class="about_info">
-          <h2>Founder</h2>
-          <img src="https://github.com/HikariNoRyu/HCI-Project/blob/main/Restaurant%20Website/Restaurant/Images/Cursed_logo1.png?raw=true" alt="logo" class="about_us">
-          <p>Here is our hero, the one and only Padang King</p>
-          <p>Wanna know more about our savior?</p>
-          <button>Read more→</button>
-          <h2>Logo</h2>
-          <img src="https://github.com/HikariNoRyu/HCI-Project/blob/main/Restaurant%20Website/Restaurant/Images/Cursed_logo2.png?raw=true" alt="logo" class="logo">
-          <p>Here is our scuffed resto logo, its basically an Italian-Padang Mascot.</p>
-          <p>Wanna know more about who designed our logo?</p>
-          <button>Read more→</button>
+      <section class="about" style="display: flex; text-align: center;">
+        <div class="about_info" style="padding-bottom: 20px;">
+            <h2>Founder</h2>
+            <img src="https://github.com/HikariNoRyu/HCI-Project/blob/main/Restaurant%20Website/Restaurant/Images/Cursed_logo1.png?raw=true" alt="logo" class="about_us">
+            <p>Here is our hero, the one and only Padang King</p>
+            <p>Wanna know more about our savior?</p>
+            <button>Read more→</button>
+        </div>
+        <div class="about_info" style="padding-bottom: 20px;">
+            <h2>Logo</h2>
+            <img src="https://github.com/HikariNoRyu/HCI-Project/blob/main/Restaurant%20Website/Restaurant/Images/Cursed_logo2.png?raw=true" alt="logo" class="logo">
+            <p>Here is our scuffed resto logo, its basically an Italian-Padang Mascot.</p>
+            <p>Wanna know more about who designed our logo?</p>
+            <button>Learn more→</button>
         </div>
       </section>
-    </div>
 
-    <script>
+      <section class="about" style="display: inline-block; text-align: center;">
+        <div class = "reserve">
+          <h2>What are you waiting for?🔪</h2>
+          <button>Reserve Now 🙂</button>
+        </div>
+      </section>
+
+  <script>
     const navButton = document.querySelector('button[aria-expanded]');
 
     function toggleNav({ target }) {
@@ -106,4 +110,19 @@
   </script>
 
 </body>
+<footer>
+  <div class="Bottom">
+  <h1>Pizzadang</h1>
+  </div>
+  <div class="Bottom_Extra">
+  <ul>
+    <li>
+      Contact Us
+    </li>
+    <li>
+      Feedback
+    </li>
+  </ul>
+  </div>
+</footer>
 </html>
