fixed image routing

--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
       <section class="about" style="display: flex; text-align: center;">
         <div class="about_info" style="padding-bottom: 20px;">
             <h2>Founder</h2>
-            <img src="https://github.com/HikariNoRyu/HCI-Project/blob/main/Restaurant%20Website/Restaurant/Images/Cursed_logo1.png?raw=true" alt="logo" class="about_us">
+            <img src="https://github.com/HikariNoRyu/Focal-Point/blob/main/Images/Cursed_logo1.png?raw=true" alt="logo" class="about_us">
             <p>Here is our hero, the one and only Padang King</p>
             <p>Wanna know more about our savior?</p>
             <button>Read more→</button>
         </div>
         <div class="about_info" style="padding-bottom: 20px;">
             <h2>Logo</h2>
-            <img src="https://github.com/HikariNoRyu/HCI-Project/blob/main/Restaurant%20Website/Restaurant/Images/Cursed_logo2.png?raw=true" alt="logo" class="logo">
+            <img src="https://github.com/HikariNoRyu/Focal-Point/blob/main/Images/Cursed_logo2.png?raw=true" alt="logo" class="logo">
             <p>Here is our scuffed resto logo, its basically an Italian-Padang Mascot.</p>
             <p>Wanna know more about who designed our logo?</p>
             <button>Learn more→</button>
